# dd

./: .gitignore  AGENTS.md  BENCHMARK.md  BENCHMARKS.md  Cargo.toml  FEEDBACK.md  HARDEN.md  PAPER.md  README.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: benchmarks.yml
benchmarks/: README.md  SCALING.md  check-regression.mjs  run.mjs  summarize.mjs
benchmarks/baselines/: memory-scaling-policy.json
benchmarks/configs/: atomic-memory-readwrite-cross-shard.sh  atomic-memory-readwrite-same-shard.sh  atomic-memory-write-cross-shard.sh  atomic-memory-write-same-shard.sh  focused-dynamic.sh  focused-memory-read.sh  focused-memory-write.sh  realworld-multiworker-auth.sh  realworld-rate-limiter.sh  saturated-fast-fetch-instant-text.sh  saturated-memory-read-wide.sh  scaling-atomic-memory-matrix.sh  scaling-memory-read-cross-shard.sh  scaling-memory-read-same-shard.sh  scaling-memory-write-cross-shard.sh  scaling-memory-write-same-shard.sh  storage-memory-write-cross-shard.sh  storage-memory-write-same-shard.sh
benchmarks/lib/: check-regression.test.mjs  results.mjs  runner-config.mjs  runner-config.test.mjs  summarize.test.mjs
benchmarks/results/: feedback-atomic-sharded-scheduler.json  feedback-direct-write-fast-path.json  feedback-memory-shards.json  local-atomic-memory-scaling-matrix.json  local-core-scaling-2026-06-24.json  local-read-core-scaling-2026-06-24.json
crates/api/: Cargo.toml
crates/api/src/: app.rs  deploy_tokens.rs  handlers.rs  handlers_runtime_tests.rs  lib.rs  main.rs  public_quic.rs  state.rs  test_support.rs
crates/api/src/handlers/: invocation.rs  routing.rs  util.rs  websocket.rs  websocket_disabled.rs
crates/api/tests/: public_h3_websocket_blackbox.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/runtime/: Cargo.toml  build.rs
crates/runtime/js/: abort_worker.js  bootstrap.js  execute_worker.js  install_worker.js
crates/runtime/js/compat/dd_deno_runtime/: http_client.js  init.js  telemetry.ts  telemetry_util.ts
crates/runtime/js/compat/deno_net/: 02_tls.js
crates/runtime/js/compat/deno_telemetry/: telemetry.ts  util.ts
crates/runtime/js/execute_worker/: core.js  dynamic.js  fetch_cache.js  memory.js  sockets_transport.js
crates/runtime/schema/: actor_rpc.capnp  memory_rpc.capnp
crates/runtime/src/: actor.rs  actor_rpc.rs  actor_rpc_capnp.rs  assets.rs  blob.rs  cache.rs  dynamic_modules.rs  engine.rs  json.rs  kv.rs  lib.rs  memory.rs  memory_rpc.rs  memory_rpc_capnp.rs  ops.rs  service.rs  static_assets.rs  turso_util.rs
crates/runtime/src/ops/: crypto.rs  dynamic.rs  dynamic_types.rs  memory.rs  memory_types.rs  request.rs  request_types.rs  storage_http.rs
crates/runtime/src/service/: config.rs  control.rs  debug.rs  dispatch.rs  dynamic.rs  facade.rs  isolate.rs  lifecycle.rs  model.rs  protocol.rs  runtime.rs  sessions.rs  storage.rs  tests.rs
crates/runtime/src/service/tests/: dynamic.rs  fixtures.rs  memory.rs  sessions.rs
crates/runtime/src/service/tests/fixtures/: invocations.rs  payloads.rs  runtime.rs  workers.rs
deploy/fly/: .dockerignore  Dockerfile  README.md  fly.toml  post-worker-deploy.sh  proxy-private-deploy.sh  store-worker-deploy.sh
docs/: binary-size-report.md  development.md  security-audit-2026-04-11.md  security-review-2026-04-11.md
examples/: actor.js  cache-delete.js  cache-vary.js  cache.js  dynamic-namespace.js  hello-traced.js  hello.js  kv-counter.js  kv.js  llm-dynamic-exec.js  memory.js  named-cache.js  preview-dynamic.js  receipts.js  router.js  stream.js  swr-site.js  trace-hub.js  trace-sink.js  transport-actor.js  transport-memory.js  wait-until-kv.js  wait-until.js  websocket-deadlock-repro.js
examples/bundled-router/: README.md  package.json  tsconfig.json
examples/chat-worker/: README.md  package.json
examples/static-assets-site/: README.md  worker.js
examples/types/: dynamic-worker-config.d.ts
examples/vite-effect/: README.md  dd.json  package.json  smoke.mjs  vite.config.ts
examples/vite-hono/: README.md  dd.json  package.json  smoke.mjs  tsconfig.json  vite.config.ts
examples/vite-react-router/: README.md  dd.json  package.json  react-router.config.ts  smoke.mjs  tsconfig.json  vite.config.ts  vitest.browser.config.ts
examples/vite-react-router-rsc/: README.md  dd.json  package.json  react-router.config.ts  rsc-dd-build.d.mts  rsc-dd-build.mjs  smoke.mjs  tsconfig.json  vite.config.ts  vitest.browser.config.ts
examples/vite-ruwuter/: README.md  dd.json  package.json  smoke.mjs  tsconfig.json  vite.config.ts
patches/: deno_crypto.patch
scripts/: build-dd-runtime-package.sh  check-dd-vite-config.mjs  check_public_memory_naming.sh  measure-binary-size.sh  patch-crate.sh  patch-save-crate.sh  run_bench_until_failure.sh  smoke_examples.sh
tasks/: 001-global-isolate-budget-and-runtime-tuning.md  001-persist-and-validate-memory-shard-layout.md  001-reject-or-consolidate-duplicate-physical-entities.md  002-parallelize-memory-outbox-shard-drains.md  002-preserve-physical-shard-identity-through-outbox-delivery.md  002-remove-intra-shard-head-of-line-blocking.md  003-move-outbox-io-off-runtime-manager.md  003-serialize-memory-layout-adoption.md  003-stripe-memory-store-hot-locks.md  004-deduplicate-memory-database-initialization.md  004-make-memory-owner-ready-queue-constant-time.md  004-make-runtime-shutdown-deterministic.md  005-reuse-memory-database-connections.md  005-use-bounded-lru-memory-caches.md  006-make-benchmark-matrices-opt-in.md  007-generate-scaling-summary.md  008-add-memory-scheduler-observability.md  009-add-performance-regression-gates.md  010-fix-benchmark-signal-139-instability.md  011-scale-runtime-manager-beyond-one-thread.md  012-add-memory-shard-resharding-tool.md  013-capture-full-shard-matrix-findings.md  014-harden-runtime-service-shutdown.md  015-audit-memory-shard-hash-inputs.md  016-add-config-surface-for-memory-storage-tuning.md  017-profile-direct-write-regression.md  018-add-task-pruning-policy.md  PARALLEL_PERFORMANCE.md  README.md
(+69 files in other folders)
