[workspace]
members = [
  "crates/api",
  "crates/cli",
  "crates/common",
  "crates/runtime",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
base64 = "0.22"
deno_core = "0.394"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-json = { version = "0.14", features = ["serde_impl"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["trace", "http-proto", "reqwest-client"] }
uuid = { version = "1", features = ["serde", "v4"] }

[patch.crates-io]
deno_crypto = { path = "patched-crates/deno_crypto" }

[profile.dev-runtime]
inherits = "release"
codegen-units = 1
debug = false
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"

[profile.dist]
inherits = "release"
debug = false
incremental = false
codegen-units = 1
lto = "thin"
opt-level = 3
strip = "symbols"
