[package]
name = "dd_server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
base64.workspace = true
clap.workspace = true
bytes = "1"
common = { path = "../common" }
futures = "0.3"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["http1", "http2", "server", "tokio"] }
runtime = { path = "../runtime" }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
tokio.workspace = true
tokio-quiche = "0.16.1"
tokio-stream = "0.1"
tokio-tungstenite = "0.28"
futures-util = "0.3"
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
uuid.workspace = true

[dev-dependencies]
rcgen = "0.14"
serial_test = "3"
