[package]
name = "dd_server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
base64.workspace = true
clap.workspace = true
bytes = "1"
common = { path = "../common" }
futures = "0.3"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["http1", "http2", "server", "tokio"] }
runtime = { path = "../runtime", default-features = false }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
tokio.workspace = true
tokio-quiche = { version = "0.16.1", optional = true }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.28", optional = true }
futures-util = "0.3"
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
uuid.workspace = true

[features]
default = ["http3", "websocket", "otel"]
http3 = ["dep:tokio-quiche", "websocket"]
websocket = ["dep:tokio-tungstenite"]
otel = [
    "runtime/otel",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
]

[dev-dependencies]
rcgen = "0.14"
serial_test = "3"

[[test]]
name = "public_h3_websocket_blackbox"
required-features = ["http3", "websocket"]
