[package]
name = "runtime"
edition.workspace = true
license.workspace = true
version.workspace = true
build = "build.rs"

[dependencies]
common = { path = "../common" }
deno_core.workspace = true
turso = "0.5.1"
capnp = "0.20"
serde.workspace = true
simd-json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
uuid.workspace = true

[dev-dependencies]
serial_test = "3"

[build-dependencies]
capnpc = "0.20"
