[package]
name = "runtime"
edition.workspace = true
license.workspace = true
version.workspace = true
build = "build.rs"

[dependencies]
common = { path = "../common" }
deno_core.workspace = true
turso = "0.5.1"
capnp = "0.20"
serde.workspace = true
serde_json.workspace = true
simd-json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
uuid.workspace = true
getrandom = "0.3"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = { version = "0.10", features = ["aes"] }

[dev-dependencies]
serial_test = "3"

[build-dependencies]
capnpc = "0.20"
